Replace youtube-nocookie with standard YouTube for better engagement tracking
- Update _includes/embedded_resource.html to use youtube.com/embed
- Update lib/talk_renderer.rb to use standard YouTube embed URLs
- Update CSP policy to allow youtube.com instead of youtube-nocookie.com
- Fix all test expectations to match standard YouTube URLs
- Ensure YouTube can track video views and suggest more talks to viewers

This change prioritizes content discovery and recommendation over privacy,
helping viewers find more of the speaker's content through YouTube's algorithm.

--- a/_includes/embedded_resource.html
+++ b/_includes/embedded_resource.html
@@ -189,7 +189,7 @@ Usage: {% include embedded_resource.html url=page.slides type="slides" %}
   {% endif %}
   
   {% if video_id != "" %}
-    {% assign embed_url = "https://www.youtube-nocookie.com/embed/" | append: video_id %}
+    {% assign embed_url = "https://www.youtube.com/embed/" | append: video_id %}
     
     {% if preview_mode %}
       <div class="preview-thumbnail preview-{{ size }}">
