--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
     <meta name="twitter:description" content="{% if page.description %}{{ page.description | escape }}{% else %}{{ site.speaker.bio }}{% endif %}">
     
     <!-- Security Headers -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; script-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data: https://fonts.gstatic.com; frame-src 'self' https://www.youtube-nocookie.com https://docs.google.com https://drive.google.com; connect-src 'self'{% if jekyll.environment == 'development' %} ws://127.0.0.1:35729{% endif %};">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; script-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data: https://fonts.gstatic.com; frame-src 'self' https://www.youtube.com https://docs.google.com https://drive.google.com; connect-src 'self'{% if jekyll.environment == 'development' %} ws://127.0.0.1:35729{% endif %};">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
     
     <!-- Stylesheets -->
