Fix abstract display duplication issue
- Add extracted_abstract field to migration script frontmatter generation
- Update talk template to use extracted_abstract instead of extracted_description
- Remove duplicate abstract from header, keep only in content section with proper H2 heading
- Improve abstract extraction to get real talk content from #desc element
- Update JSON-LD structured data to use extracted_abstract

Resolves issue where generic description appeared twice on talk pages

--- a/_layouts/talk.html
+++ b/_layouts/talk.html
@@ -30,9 +30,6 @@ layout: default
                         {% endif %}
         </div>
         
-        {% if page.extracted_description %}
-        <p class="talk-description" itemprop="description">{{ page.extracted_description }}</p>
-        {% endif %}
     </header>
 
 
@@ -67,9 +64,10 @@ layout: default
             </div>
         {% endif %}
         
-        {% if page.extracted_description %}
-            <div class="talk-description">
-                {{ page.extracted_description | markdownify }}
+        {% if page.extracted_abstract %}
+            <div class="talk-abstract">
+                <h2>Abstract</h2>
+                {{ page.extracted_abstract | markdownify }}
             </div>
         {% endif %}
         
@@ -100,7 +98,7 @@ layout: default
     "name": "{{ page.extracted_conference | escape }}"
   },
   "datePublished": "{{ page.extracted_date }}",
-  {% if page.extracted_description %}"description": "{{ page.extracted_description | escape }}",{% endif %}
+  {% if page.extracted_abstract %}"description": "{{ page.extracted_abstract | escape }}",{% endif %}
   "url": "{{ page.url | absolute_url }}"
 }
 </script>
